// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuScreen should render default values 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuScreen
    links={
      Array [
        Object {
          "condition": true,
          "label": "debug",
          "onPress": [MockFunction],
        },
        Object {
          "condition": true,
          "label": "activity history",
          "onPress": [MockFunction],
        },
        Object {
          "condition": true,
          "label": "leaderboard",
          "onPress": [MockFunction],
        },
        Object {
          "condition": true,
          "label": "member zone",
          "onPress": [MockFunction],
        },
      ]
    }
    onPressClose={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <StatusBar
          animated={false}
          showHideTransition="fade"
        />,
        <Component
          style={
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingLeft": 210,
              "paddingTop": 220,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "height": 112,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 20,
                "width": 92,
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                }
              }
              style={
                Object {
                  "height": 26,
                  "width": 26,
                }
              }
            />
          </TouchableOpacity>
          <Component
            style={
              Object {
                "marginBottom": 68,
                "width": 112,
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                }
              }
              style={Object {}}
            />
          </Component>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 124,
              }
            }
          >
            <Component
              style={
                Object {
                  "paddingRight": 16,
                }
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "color": "rgb(51,51,51)",
                    "fontSize": 36,
                    "width": "100%",
                  }
                }
              >
                debug  
              </YuText>
            </Component>
          </TouchableOpacity>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 124,
              }
            }
          >
            <Component
              style={
                Object {
                  "paddingRight": 16,
                }
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "color": "rgb(51,51,51)",
                    "fontSize": 36,
                    "width": "100%",
                  }
                }
              >
                activity history  
              </YuText>
            </Component>
          </TouchableOpacity>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 124,
              }
            }
          >
            <Component
              style={
                Object {
                  "paddingRight": 16,
                }
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "color": "rgb(51,51,51)",
                    "fontSize": 36,
                    "width": "100%",
                  }
                }
              >
                leaderboard  
              </YuText>
            </Component>
          </TouchableOpacity>
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 124,
              }
            }
          >
            <Component
              style={
                Object {
                  "paddingRight": 16,
                }
              }
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "borderColor": "transparent",
                    "borderWidth": 1,
                    "color": "rgb(51,51,51)",
                    "fontSize": 36,
                    "width": "100%",
                  }
                }
              >
                member zone  
              </YuText>
            </Component>
          </TouchableOpacity>
        </Component>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "showHideTransition": "fade",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 112,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 20,
                  "width": 92,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                  }
                }
                style={
                  Object {
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </TouchableOpacity>,
            <Component
              style={
                Object {
                  "marginBottom": 68,
                  "width": 112,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                  }
                }
                style={Object {}}
              />
            </Component>,
            Array [
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "height": 124,
                  }
                }
              >
                <Component
                  style={
                    Object {
                      "paddingRight": 16,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    debug  
                  </YuText>
                </Component>
              </TouchableOpacity>,
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "height": 124,
                  }
                }
              >
                <Component
                  style={
                    Object {
                      "paddingRight": 16,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    activity history  
                  </YuText>
                </Component>
              </TouchableOpacity>,
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "height": 124,
                  }
                }
              >
                <Component
                  style={
                    Object {
                      "paddingRight": 16,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    leaderboard  
                  </YuText>
                </Component>
              </TouchableOpacity>,
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "height": 124,
                  }
                }
              >
                <Component
                  style={
                    Object {
                      "paddingRight": 16,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    member zone  
                  </YuText>
                </Component>
              </TouchableOpacity>,
            ],
          ],
          "style": Object {
            "backgroundColor": "white",
            "flex": 1,
            "paddingLeft": 210,
            "paddingTop": 220,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                  }
                }
                style={
                  Object {
                    "height": 26,
                    "width": 26,
                  }
                }
              />,
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "height": 112,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 20,
                "width": 92,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "contain",
                "source": Object {
                  "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                },
                "style": Object {
                  "height": 26,
                  "width": 26,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                  }
                }
                style={Object {}}
              />,
              "style": Object {
                "marginBottom": 68,
                "width": 112,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "contain",
                "source": Object {
                  "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                },
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": Array [
                undefined,
                <Component
                  style={
                    Object {
                      "paddingRight": 16,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    debug  
                  </YuText>
                </Component>,
              ],
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 124,
              },
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    debug  
                  </YuText>,
                  "style": Object {
                    "paddingRight": 16,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "bold": true,
                    "children": "debug  ",
                    "style": Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "rgb(51,51,51)",
                      "fontSize": 36,
                      "width": "100%",
                    },
                  },
                  "ref": null,
                  "rendered": "debug  ",
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": Array [
                undefined,
                <Component
                  style={
                    Object {
                      "paddingRight": 16,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    activity history  
                  </YuText>
                </Component>,
              ],
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 124,
              },
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    activity history  
                  </YuText>,
                  "style": Object {
                    "paddingRight": 16,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "bold": true,
                    "children": "activity history  ",
                    "style": Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "rgb(51,51,51)",
                      "fontSize": 36,
                      "width": "100%",
                    },
                  },
                  "ref": null,
                  "rendered": "activity history  ",
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": Array [
                undefined,
                <Component
                  style={
                    Object {
                      "paddingRight": 16,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    leaderboard  
                  </YuText>
                </Component>,
              ],
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 124,
              },
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    leaderboard  
                  </YuText>,
                  "style": Object {
                    "paddingRight": 16,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "bold": true,
                    "children": "leaderboard  ",
                    "style": Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "rgb(51,51,51)",
                      "fontSize": 36,
                      "width": "100%",
                    },
                  },
                  "ref": null,
                  "rendered": "leaderboard  ",
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": Array [
                undefined,
                <Component
                  style={
                    Object {
                      "paddingRight": 16,
                    }
                  }
                >
                  <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    member zone  
                  </YuText>
                </Component>,
              ],
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 124,
              },
            },
            "ref": null,
            "rendered": Array [
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <YuText
                    bold={true}
                    style={
                      Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      }
                    }
                  >
                    member zone  
                  </YuText>,
                  "style": Object {
                    "paddingRight": 16,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "bold": true,
                    "children": "member zone  ",
                    "style": Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "rgb(51,51,51)",
                      "fontSize": 36,
                      "width": "100%",
                    },
                  },
                  "ref": null,
                  "rendered": "member zone  ",
                  "type": [Function],
                },
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <StatusBar
            animated={false}
            showHideTransition="fade"
          />,
          <Component
            style={
              Object {
                "backgroundColor": "white",
                "flex": 1,
                "paddingLeft": 210,
                "paddingTop": 220,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 112,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 20,
                  "width": 92,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                  }
                }
                style={
                  Object {
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </TouchableOpacity>
            <Component
              style={
                Object {
                  "marginBottom": 68,
                  "width": 112,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                  }
                }
                style={Object {}}
              />
            </Component>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 124,
                }
              }
            >
              <Component
                style={
                  Object {
                    "paddingRight": 16,
                  }
                }
              >
                <YuText
                  bold={true}
                  style={
                    Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "rgb(51,51,51)",
                      "fontSize": 36,
                      "width": "100%",
                    }
                  }
                >
                  debug  
                </YuText>
              </Component>
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 124,
                }
              }
            >
              <Component
                style={
                  Object {
                    "paddingRight": 16,
                  }
                }
              >
                <YuText
                  bold={true}
                  style={
                    Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "rgb(51,51,51)",
                      "fontSize": 36,
                      "width": "100%",
                    }
                  }
                >
                  activity history  
                </YuText>
              </Component>
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 124,
                }
              }
            >
              <Component
                style={
                  Object {
                    "paddingRight": 16,
                  }
                }
              >
                <YuText
                  bold={true}
                  style={
                    Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "rgb(51,51,51)",
                      "fontSize": 36,
                      "width": "100%",
                    }
                  }
                >
                  leaderboard  
                </YuText>
              </Component>
            </TouchableOpacity>
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 124,
                }
              }
            >
              <Component
                style={
                  Object {
                    "paddingRight": 16,
                  }
                }
              >
                <YuText
                  bold={true}
                  style={
                    Object {
                      "borderColor": "transparent",
                      "borderWidth": 1,
                      "color": "rgb(51,51,51)",
                      "fontSize": 36,
                      "width": "100%",
                    }
                  }
                >
                  member zone  
                </YuText>
              </Component>
            </TouchableOpacity>
          </Component>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "showHideTransition": "fade",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "height": 112,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": 0,
                    "top": 20,
                    "width": 92,
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                    }
                  }
                  style={
                    Object {
                      "height": 26,
                      "width": 26,
                    }
                  }
                />
              </TouchableOpacity>,
              <Component
                style={
                  Object {
                    "marginBottom": 68,
                    "width": 112,
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                    }
                  }
                  style={Object {}}
                />
              </Component>,
              Array [
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 124,
                    }
                  }
                >
                  <Component
                    style={
                      Object {
                        "paddingRight": 16,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      debug  
                    </YuText>
                  </Component>
                </TouchableOpacity>,
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 124,
                    }
                  }
                >
                  <Component
                    style={
                      Object {
                        "paddingRight": 16,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      activity history  
                    </YuText>
                  </Component>
                </TouchableOpacity>,
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 124,
                    }
                  }
                >
                  <Component
                    style={
                      Object {
                        "paddingRight": 16,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      leaderboard  
                    </YuText>
                  </Component>
                </TouchableOpacity>,
                <TouchableOpacity
                  activeOpacity={0.2}
                  onPress={[MockFunction]}
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 124,
                    }
                  }
                >
                  <Component
                    style={
                      Object {
                        "paddingRight": 16,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      member zone  
                    </YuText>
                  </Component>
                </TouchableOpacity>,
              ],
            ],
            "style": Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingLeft": 210,
              "paddingTop": 220,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                    }
                  }
                  style={
                    Object {
                      "height": 26,
                      "width": 26,
                    }
                  }
                />,
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "height": 112,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 20,
                  "width": 92,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "resizeMode": "contain",
                  "source": Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                  },
                  "style": Object {
                    "height": 26,
                    "width": 26,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                    }
                  }
                  style={Object {}}
                />,
                "style": Object {
                  "marginBottom": 68,
                  "width": 112,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "resizeMode": "contain",
                  "source": Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                  },
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": Array [
                  undefined,
                  <Component
                    style={
                      Object {
                        "paddingRight": 16,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      debug  
                    </YuText>
                  </Component>,
                ],
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 124,
                },
              },
              "ref": null,
              "rendered": Array [
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      debug  
                    </YuText>,
                    "style": Object {
                      "paddingRight": 16,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "bold": true,
                      "children": "debug  ",
                      "style": Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      },
                    },
                    "ref": null,
                    "rendered": "debug  ",
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": Array [
                  undefined,
                  <Component
                    style={
                      Object {
                        "paddingRight": 16,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      activity history  
                    </YuText>
                  </Component>,
                ],
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 124,
                },
              },
              "ref": null,
              "rendered": Array [
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      activity history  
                    </YuText>,
                    "style": Object {
                      "paddingRight": 16,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "bold": true,
                      "children": "activity history  ",
                      "style": Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      },
                    },
                    "ref": null,
                    "rendered": "activity history  ",
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": Array [
                  undefined,
                  <Component
                    style={
                      Object {
                        "paddingRight": 16,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      leaderboard  
                    </YuText>
                  </Component>,
                ],
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 124,
                },
              },
              "ref": null,
              "rendered": Array [
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      leaderboard  
                    </YuText>,
                    "style": Object {
                      "paddingRight": 16,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "bold": true,
                      "children": "leaderboard  ",
                      "style": Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      },
                    },
                    "ref": null,
                    "rendered": "leaderboard  ",
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": Array [
                  undefined,
                  <Component
                    style={
                      Object {
                        "paddingRight": 16,
                      }
                    }
                  >
                    <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      member zone  
                    </YuText>
                  </Component>,
                ],
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 124,
                },
              },
              "ref": null,
              "rendered": Array [
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <YuText
                      bold={true}
                      style={
                        Object {
                          "borderColor": "transparent",
                          "borderWidth": 1,
                          "color": "rgb(51,51,51)",
                          "fontSize": 36,
                          "width": "100%",
                        }
                      }
                    >
                      member zone  
                    </YuText>,
                    "style": Object {
                      "paddingRight": 16,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "bold": true,
                      "children": "member zone  ",
                      "style": Object {
                        "borderColor": "transparent",
                        "borderWidth": 1,
                        "color": "rgb(51,51,51)",
                        "fontSize": 36,
                        "width": "100%",
                      },
                    },
                    "ref": null,
                    "rendered": "member zone  ",
                    "type": [Function],
                  },
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`MenuScreen should render without links 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MenuScreen
    links={Array []}
    onPressClose={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <StatusBar
          animated={false}
          showHideTransition="fade"
        />,
        <Component
          style={
            Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingLeft": 210,
              "paddingTop": 220,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "height": 112,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 20,
                "width": 92,
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                }
              }
              style={
                Object {
                  "height": 26,
                  "width": 26,
                }
              }
            />
          </TouchableOpacity>
          <Component
            style={
              Object {
                "marginBottom": 68,
                "width": 112,
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                }
              }
              style={Object {}}
            />
          </Component>
        </Component>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animated": false,
          "showHideTransition": "fade",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 112,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 20,
                  "width": 92,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                  }
                }
                style={
                  Object {
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </TouchableOpacity>,
            <Component
              style={
                Object {
                  "marginBottom": 68,
                  "width": 112,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                  }
                }
                style={Object {}}
              />
            </Component>,
            Array [],
          ],
          "style": Object {
            "backgroundColor": "white",
            "flex": 1,
            "paddingLeft": 210,
            "paddingTop": 220,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                  }
                }
                style={
                  Object {
                    "height": 26,
                    "width": 26,
                  }
                }
              />,
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "height": 112,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "top": 20,
                "width": 92,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "contain",
                "source": Object {
                  "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                },
                "style": Object {
                  "height": 26,
                  "width": 26,
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                  }
                }
                style={Object {}}
              />,
              "style": Object {
                "marginBottom": 68,
                "width": 112,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "resizeMode": "contain",
                "source": Object {
                  "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                },
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <StatusBar
            animated={false}
            showHideTransition="fade"
          />,
          <Component
            style={
              Object {
                "backgroundColor": "white",
                "flex": 1,
                "paddingLeft": 210,
                "paddingTop": 220,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.2}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "height": 112,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 20,
                  "width": 92,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                  }
                }
                style={
                  Object {
                    "height": 26,
                    "width": 26,
                  }
                }
              />
            </TouchableOpacity>
            <Component
              style={
                Object {
                  "marginBottom": 68,
                  "width": 112,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                  }
                }
                style={Object {}}
              />
            </Component>
          </Component>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animated": false,
            "showHideTransition": "fade",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <TouchableOpacity
                activeOpacity={0.2}
                onPress={[MockFunction]}
                style={
                  Object {
                    "alignItems": "center",
                    "height": 112,
                    "justifyContent": "center",
                    "position": "absolute",
                    "right": 0,
                    "top": 20,
                    "width": 92,
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                    }
                  }
                  style={
                    Object {
                      "height": 26,
                      "width": 26,
                    }
                  }
                />
              </TouchableOpacity>,
              <Component
                style={
                  Object {
                    "marginBottom": 68,
                    "width": 112,
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                    }
                  }
                  style={Object {}}
                />
              </Component>,
              Array [],
            ],
            "style": Object {
              "backgroundColor": "white",
              "flex": 1,
              "paddingLeft": 210,
              "paddingTop": 220,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                    }
                  }
                  style={
                    Object {
                      "height": 26,
                      "width": 26,
                    }
                  }
                />,
                "onPress": [MockFunction],
                "style": Object {
                  "alignItems": "center",
                  "height": 112,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 20,
                  "width": 92,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "resizeMode": "contain",
                  "source": Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/x.png",
                  },
                  "style": Object {
                    "height": 26,
                    "width": 26,
                  },
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <Image
                  resizeMode="contain"
                  source={
                    Object {
                      "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                    }
                  }
                  style={Object {}}
                />,
                "style": Object {
                  "marginBottom": 68,
                  "width": 112,
                },
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "resizeMode": "contain",
                  "source": Object {
                    "testUri": "../../../src/components/screens/member/menu/assets/logo.png",
                  },
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
